--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "SRI-BOT",
   "version": "1.0.0",
@@ -12,7 +11,7 @@
   "author": "WalukaPahan",
   "license": "GPL-3.0 license",
   "dependencies": {
-    "@whiskeysockets/baileys": "npm:baileys-mod",
+    "@whiskeysockets/baileys": "npm:@rexxhayanasi/elaina-bail",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@viper-x/fancytext": "^1.0.2",
     "@octokit/rest": "^18.12.0",
